eos-deployment-manifests/istio-1.14.1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kiali
  namespace: istio-system
spec:
  rules:
  - host: dev-kiali.edshopper.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
  ingressClassName: nginx
